chore: allow config of sentry  project and organisation through env vars

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ SENTRY_RELEASE=
 SENTRY_ENVIRONMENT=
 SENTRY_AUTH_TOKEN=
 SENTRY_SUPPRESS_GLOBAL_ERROR_HANDLER_FILE_WARNING=1
+SENTRY_PROJECT=
+SENTRY_ORGANISATION=
